packages/portal-style/src/modules/_community-view.scss
.dp-po-community-view {
  $self: '.dp-po-community-view';

  &-item {
    display: flex;
    border-top: 1px solid $grey-light;
    padding: 20px 0;
    flex-wrap: wrap;

    &-head {
      border: none;
      padding: 0 0 10px;
      @include typo($s17, 500, 'head');
      color: $grey-dark;

      #{$self}-activity {
        text-align: center;
      }
    }

    &:last-child {
      padding-bottom: 0;
    }
  }

  &-likes {
    flex: 0 0 50px;
    margin-right: 20px;
  }

  &-title {
    flex: 0 0 calc(100% - 530px);
    overflow: hidden;
    display: flex;
    flex-wrap: wrap;
    align-items: center;

    .dp-po-avatar {

      &-image,
      &-name {
        width: 20px;
        height: 20px;
        font-size: 11px;
        padding: 3px 0;
        font-weight: normal;
        display: inline-block;
      }
    }
  }

  &-link {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    flex: 0 0 100%;
    margin-bottom: 10px;
    @include typo($s19, 400, 'head');
    color: $grey-darkest;
  }

  &-time {
    font-size: $s12;
    margin-left: 10px;
    position: relative;
    top: 2px;
  }

  &-status {
    box-sizing: content-box;
    flex: 0 0 130px;
    padding-left: 20px;
  }

  &-comments {
    flex: 0 0 120px;
    text-align: center;
  }

  &-activity {
    box-sizing: content-box;
    flex: 0 0 160px;
    padding: 0 10px;

    &-list {
      display: flex;
      margin: 0;
      padding: 0;
    }

    &-item {
      display: block;
      list-style: none;
      font-size: $s12;

      text-align: center;
      flex: 0 0 34px;
    }

    &-image {
      border-radius: 50%;
      width: 30px;
      height: 30px;
      margin-bottom: 8px;
      border: 2px solid $white;
      display: inline-block;
    }

    &-name {
      border-radius: 50%;
      width: 30px;
      height: 30px;
      margin-bottom: 8px;
      border: 2px solid $white;
      display: inline-block;
      background: $grey;
      color: $white;
      font-weight: 700;
      padding: 5px 0;
      text-align: center;
    }


    &-link {
      color: $grey-dark;
      display: flex;
      flex-wrap: wrap;
      justify-content: center;

      &:hover {
        text-decoration: none;

        #{$self}-activity-image {
          border-color: $brand-primary;
          position: relative;
          z-index: 10;
        }
      }
    }

  }

  &-official {
    flex: 0 0 calc(100% - 70px);
    position: relative;
    background: $grey-lightest;
    border-radius: 4px;
    padding: 10px;
    margin-left: 70px;
    margin-top: 15px;

    &-time {
      position: absolute;
      right: 10px;
      top: 10px;
      color: $grey-dark;
      font-size: $s15;
    }

    &-wrap {
      display: flex;
      align-items: flex-start;

      img {
        max-width: 20px;
        height: auto;
        margin-right: 10px;
      }
    }

    &-author {
      border-radius: 50%;
      margin-top: 12px;
    }

    &-title {
      margin: 0;
      @include typo($s17, 400, 'head');
      color: $grey-dark;
    }

    &-response {
      font-size: $s15;
      line-height: 1.5;
      margin: 10px 0 0;

    }
  }

  &-compact {
    #{$self}-item {
      align-items: center;
    }

    #{$self}-likes {
      flex: 0 0 80px;
    }

    #{$self}-title {
      flex: 0 0 calc(100% - 640px);
    }

    #{$self}-office {
      flex: 0 0 49px;
      text-align: center;
      position: relative;

      img {
        max-width: 25px;
      }

      &-reply {
        position: absolute;
        background: $white;
        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
        border-radius: 2px;
        border: 1px solid $grey-lighter;
        width: 500px;
        z-index: 1;
        text-align: left;
        padding: 15px;

        &-title {
          @include typo($s15, 500, 'head');
        }

        &-desc {
          font-size: $s16;
          line-height: 1.5;
          margin: 0 0 10px;
        }

        &-list {
          margin: 0;
          padding: 0;
          display: flex;
          align-items: center;
          justify-content: flex-end;
        }

        &-item {
          list-style: none;
          position: relative;
          font-size: $s16;
          margin: 0 0 0 20px;

          &:after {
            content: '';
            width: 1px;
            height: 100%;
            position: absolute;
            background: $grey-light;
            right: -10px;
            top: 0;
          }

          &:last-child {
            color: $grey;

            &:after {
              display: none;
            }
          }
        }
      }
    }

    #{$self}-link {
      margin: 0;
    }

    #{$self}-comments {}

    #{$self}-author {
      flex: 0 0 70px;
      text-align: center;

      .dp-po-avatar {
        justify-content: center;

        &-image {
          margin: 0;
        }
      }


      &-link {
        display: inline-block;

        &:hover {
          img {
            border-color: $brand-primary !important;
          }
        }
      }

      .dp-po-avatar-name {
        margin: 0;
      }
    }

    #{$self}-activity {
      flex: 0 0 130px;

      &-list {}

      &-item {
        flex: inherit;

        &:first-child {
          #{$self}-activity-image {
            margin-left: 0;
          }
        }
      }

      &-image,
      &-name {
        margin: 0 0 0 -5px;
      }
    }
  }

  &-statuschange {
    #{$self}-title {
      flex: 0 0 calc(100% - 620px);
    }

    #{$self}-status {
      flex: 0 0 300px;
    }

    #{$self}-official {
      margin-left: 0;
      flex: 0 0 100%;
    }
  }

}

